--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^6.5.0",
-    "browserslist": "4.21.5",
     "axios": "^1.2.3",
+    "browserslist": "4.21.5",
+    "date-fns": "^2.29.3",
     "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
