--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@turf/turf": "^6.5.0",
     "browserslist": "4.21.5",
     "axios": "^1.2.3",
+    "babel-jest": "^29.5.0",
     "mapbox-gl": "^2.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+	"jest": {
+		"transform": {
+			"^.+\\.(js|ts)$": "babel-jest"
+		},
+		"transformIgnorePatterns": []
+	},
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,5 +50,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@types/jest": "^29.5.0",
+    "axios-mock-adapter": "^1.21.4",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   }
 }
