--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-	"jest": {
-		"transform": {
-			"^.+\\.(js|ts)$": "babel-jest"
-		},
-		"transformIgnorePatterns": []
-	},
+    "jest": {
+      "transform": {
+        "^.+\\.(js|ts)$": "babel-jest"
+      },
+      "testEnviroment": "jsdom",
+      "transformIgnorePatterns": []
+    },
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -57,6 +58,7 @@
     "@types/jest": "^29.5.0",
     "axios-mock-adapter": "^1.21.4",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0"
   }
 }
